--- a/package.json
+++ b/package.json
@@ -35,8 +35,6 @@
   "devDependencies": {
     "@testing-library/dom": "^8.16.0",
     "@testing-library/user-event": "^14.2.5",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.6"
+    "autoprefixer": "^10.4.7"
   }
 }
